--- a/josephus_interface.ui
+++ b/josephus_interface.ui
@@ -124,6 +124,9 @@
        <pointsize>12</pointsize>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 0, 0);</string>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -142,6 +145,9 @@
        <family>Times New Roman</family>
        <pointsize>12</pointsize>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 0, 0);</string>
      </property>
      <property name="text">
       <string/>
